--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
     "export": "next export"
   },
   "dependencies": {
-    "chroma-js": "^2.1.2",
-    "color-thief-react": "^2.1.0",
+    "@reduxjs/toolkit": "^1.6.2",
+    "eslint-import-resolver-typescript": "latest",
+    "file-saver": "^2.0.5",
     "firebase": "^9.2.0",
+    "jszip": "^3.7.1",
+    "nanoid": "^3.1.30",
     "next": "latest",
     "npm": "^8.1.2",
+    "pako": "^2.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
+    "react-redux": "^7.2.6",
+    "react-redux-firebase": "^3.10.0",
+    "react-redux-firestore": "^0.0.1",
+    "redux-firestore": "^0.15.0",
     "styled-components": "^5.3.3"
   },
   "eslintConfig": {
